updated report tex

--- a/1stablemarriage/report.tex
+++ b/1stablemarriage/report.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{booktabs}
 \usepackage{microtype}
-\usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
+\usepackage[colorinlistoftodos]{todonotes}
 \pagestyle{empty}
 
 \title{Stable Matching Report}
