fixed typo in reports

--- a/5gorilla/report.tex
+++ b/5gorilla/report.tex
@@ -6,7 +6,7 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \pagestyle{empty}
 
-\title{Stable Matching Report}
+\title{Gorilla Report}
 \author{Author 1 and Author 2}
 
 \begin{document}
